# top-down-shooter-project

./: CMakeLists.txt  PROJE_DOKUMANI.md  README.md  main.cpp
.cache/clangd/index/: main.cpp.FD96A1ED4D3630A7.idx
