cmake_minimum_required(VERSION 3.15)
project(TopDownShooter VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(/opt/homebrew/include)
link_directories(/opt/homebrew/lib)
find_package(SFML 3.0 COMPONENTS Graphics Window System Audio REQUIRED)
add_executable(TopDownShooter main.cpp)
target_link_libraries(TopDownShooter PRIVATE SFML::Graphics SFML::Window SFML::System SFML::Audio)
